# STARS-2026

./: .brainstormer-routing.tsv  .brainstormer-version  .gitignore  AGENTS.md  ARCHITECTURE.md  ART.md  BACKLOG.md  CLAUDE.md  CODEGUIDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SCENARIOS.md  SNIFFTEST.md  SPEC.md  clippy.toml
.brainstormer/: session.json
.github/ISSUE_TEMPLATE/: bug_report.yml  formula_contribution.yml  veteran_knowledge.yml
.github/workflows/: ci.yml
brainstormer/: angles.md  hooks.md  ruleset.md
data/: star_names.json
docs/: FORMULAS.md
docs/codeglass/: ADR-0001-sniff-test-includes-cargo-fmt.md  ADR-0002-hardening-pass-after-crucible.md  ADR-0003-atom-a-hardening-interlude.md  CRUCIBLE-VERDICT-atom-2.md  H7-mutation-testing-deferred.md  PALADIN-VERDICT-atom-2.md  SESSION-BRIEF-atom-2.md
engine/: Cargo.toml
engine/src/: data.rs  determinism.rs  galaxy.rs  lib.rs  planet.rs  rng.rs  types.rs
engine/tests/: determinism.rs  determinism_wasm.rs  fr1_galaxy.rs
frontend/: package-lock.json
reference/: social-launch-drafts.md
reference/legacy-desktop-scaffold/: BabyTierOS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LLM-Protocol.md  README-stars2026.md  Scenario.md  Spec.md  gitignore.txt  types.rs
scripts/: sniff.sh
