[workspace]
resolver = "2"
members = ["engine"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "TBD"
repository = "local"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
rand_chacha = "0.3"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
