[package]
name = "stars2026-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "STARS 2026 game engine — deterministic, dual-target (wasm32 + native)."

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
