[package]
name = "stars2026-engine"
version = "0.1.0"
edition = "2021"
authors = ["Patrick McGuire"]
description = "Stars 2026 — 4X space strategy game engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
